2005-10-20  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/tclobj.c: Generalise the ns_thread routines for wrapping a C
	structs with a Tcl obj handle.  Slighlty enhanced: also allows
	wrapping of statically allocated C structs which always have a direct
	string name -> struct relationship.
	* nsd/tclcmds.c:
	* nsd/tclthread.c: Convert to Tcl objects, remove some duplicated
	code and convert to the new ns:addr Tcl object type interface.
	* tests/ns_thread.test: Exercise the ns_thread command and the
	new ns:addr Tcl object type.

	* nsdbtest/nsdbtest.c: Remove unused function declaration.

	* nsd/tclinit.c (Ns_TclRegisterTrace): Remove debug logging code.

	* nsd/nsd.h:
	* nsd/tclinit.c (Ns_TclTraceCreate): Run CREATE traces as they are
	registered in order to make Tcl	comamnds registered by binary
	module available to the boot script and Tcl module files.
	* nsd/init.tcl: Rename use of depraciated api.
	* nsdb/db.h:
	* nsdb/nsdb.c: 
	* nsdb/dbtcl.c: Fix bug where Ns_TclRegisterTrace was being called
	after server startup.
	* tests/test.nscfg:
	* tests/ns_accesslog.test: Add stub tests for the nslog module.

	* Makefile:
	* nsdbtest/Makefile:
	* nsdbtest/nsdbtest.c:
	* tests/test.nscfg:
	* tests/nsdb.test: Implement a simple nsdb driver for testing and
	add the beginnings of some tests.

2005-10-20  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/init.tcl: fixed to be able to load Tcl modules
	* include/ns.h: changed reserved keyword delete so C++ 
	module scan be compiled

2005-10-20  Bernd Eidenschink  <eide@users.sourceforge.net>

	* tests/ns_conn.test:
	* tests/ns_crypt.test:
	* tests/ns_env.test:
	* tests/ns_gifsize.test:
	* tests/ns_jpegsize.test:
	* tests/ns_httptime.test:
	* tests/ns_info.test:
	* tests/ns_mime.test:
	* tests/ns_sha1.test: various new tests, some to be 
	improved over time (especially ns_info)
	* tests/images/: some gif and jpeg files for the
	image tests
	

2005-10-20  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
